--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 .pyenv
 __pycache__
 
-# chatapp database
-chatapp.db
+# All data that need ignoring
+# This is where i keep the database file and environment files
+.data
+.test
